# Automated_driving_skills_test_system

./: .gitattributes  .gitignore
API_new/: CMakeLists.txt  main.cpp
GPS/GPS_data_extraction/: GPS_data.txt  GPS_data_extraction.cpp  GPS_data_extraction.sln  GPS_data_extraction.vcxproj  GPS_data_extraction.vcxproj.filters
GPS/GPS_data_extraction/GPS_data.5292caf5/x64/Debug/: GPS_data_extraction.exe.recipe  GPS_data_extraction.ilk  vc143.idb
Lidar/: CMakeLists.txt  lidar_drive_simulation_with_angles.txt
Lidar/New folder/: lidar_simulated_output.txt  lidar_simulated_output_filtered_by_angle.txt  lidar_simulated_output_with_angles.txt
Lidar/ReadFromLidar/: ReadFromLidar.cpp  ReadFromLidar.sln  ReadFromLidar.vcxproj  ReadFromLidar.vcxproj.filters
Lidar/ReadFromLidar/ReadFromLidar/x64/Debug/: ReadFromLidar.exe.recipe  vc143.idb  (+1 more)
Lidar/try/: try.sln  try.vcxproj
kelman-filter/src/: FusionEKF.cpp  json.hpp
main_prosses/: מסנן קלמן.txt
main_prosses/Automated_driving_skills_test_system/: Automated_driving_skills_test_system.cpp  Automated_driving_skills_test_system.sln  Automated_driving_skills_test_system.vcxproj  Automated_driving_skills_test_system.vcxproj.filters  BehavioralPlanner.cpp  BehavioralPlanner.h  Camera.cpp  Camera.h  Car.cpp  Car.h  DrivingRoute.cpp  DrivingRoute.h  GPS.cpp  GPS.h  GPS.txt  Globals.cpp  Globals.h  IMU.cpp  IMU.h  IMU.txt  Lidar.cpp  Lidar.h  Lidar.txt  Perception.cpp  Perception.h  RoadLane.cpp  RoadLane.h  RoadSpeedInfo.cpp  RoadSpeedInfo.h  driving_instructions.txt  func.h  global.cpp  global.h  globalFunc.cpp  globalFunc.h
(+30 files in other folders)
